# laptop-notes

fastapi-notes/: 22-ai-foundations-gemini.py  23-embeddings-and-vector-db.py  24-rag-pipeline.py  25-chitravarnan.md  26-gyansetu.md  27-sahayak-ai.md
js-dsa/: 01-big-o-notation.js  02-arrays-deep-dive.js  03-strings-and-patterns.js  04-hash-tables.js  05-stacks.js  06-queues.js  07-linked-lists.js  08-recursion.js  09-sorting-basics.js  10-sorting-advanced.js  11-searching.js  12-trees-basics.js  13-binary-search-tree.js  14-heaps.js  15-tries.js  16-graphs-basics.js  17-graph-algorithms.js  18-sliding-window.js  19-two-pointers.js  20-backtracking.js  21-dynamic-programming.js  22-greedy-algorithms.js  23-bit-manipulation.js  24-lru-cache.js  25-real-world-dsa.js
js-internals/: 01-js-engine-overview.js  02-parsing-and-ast.js  03-compilation-pipeline.js  04-execution-context.js  05-call-stack-deep-dive.js  06-memory-model.js  07-hidden-classes-and-shapes.js  08-garbage-collection.js  09-memory-leaks.js  10-event-loop-internals.js  11-jit-optimization.js  12-numbers-internals.js  13-strings-internals.js  14-closures-internals.js  15-async-internals.js  16-shared-memory-atomics.js  17-wasm-interop.js  18-performance-profiling.js
js-testing/: 01-testing-fundamentals.js  02-test-anatomy.js  03-matchers-and-assertions.js  04-mocking-basics.js  (+11 more)
rust-notes/30-vaayusanket/: Cargo.toml  README.md
rust-notes/30-vaayusanket/src/: alert.rs  config.rs  display.rs  export.rs  main.rs
rust-notes/30-vaayusanket/src/monitor/: cpu.rs  disk.rs  memory.rs  mod.rs  process.rs
(+174 files in other folders)
